site/src/manual/2.0/index.md
# API 参考手册


Buession SpringCloud API 包含以下目录：


|  模块                                     | 使用帮助                                 | 手册                                                                         |
|  ----                                    | ----                                    | ----                                 										   |
| buession-springcloud-common              | [使用帮助](common/index.md)              | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-common/2.0.1/)        |
| buession-springcloud-config-client       | [使用帮助](config-client/index.md)       | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-config-client/2.0.1/)        |
| buession-springcloud-config-server       | [使用帮助](config-server/index.md)       | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-config-server/2.0.1/)        |
| buession-springcloud-consul              | [使用帮助](consul/index.md)              | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-consul/2.0.1/)        |
| buession-springcloud-feign               | [使用帮助](feign/index.md)               | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-feign/2.0.1/)        |
| buession-springcloud-gateway             | [使用帮助](gateway/index.md)             | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-gateway/2.0.1/)        |
| buession-springcloud-hystrix             | [使用帮助](hystrix/index.md)             | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-hystrix/2.0.1/)        |
| buession-springcloud-kubernetes          | [使用帮助](kubernetes/index.md)          | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-kubernetes/2.0.1/)        |
| buession-springcloud-metrics             | [使用帮助](metrics/index.md)             | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-metrics/2.0.1/)        |
| buession-springcloud-nacos-config-client | [使用帮助](nacos-config-client/index.md) | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-nacos-config-client/2.0.1/)        |
| buession-springcloud-nacos-discovery     | [使用帮助](nacos-discovery/index.md)     | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-nacos-discovery/2.0.1/)        |
| buession-springcloud-ribbon              | [使用帮助](ribbon/index.md)              | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-ribbon/2.0.1/)        |
| buession-springcloud-stream              | [使用帮助](stream/index.md)              | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-stream/2.0.1/)        |
| buession-springcloud-zuul                | [使用帮助](zuul/index.md)                | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-zuul/2.0.1/)        |