site/src/manual/3.0/index.md
# API 参考手册


Buession SpringCloud API 包含以下目录：


|  模块                                     | 使用帮助                                 | 手册                                                                         |
|  ----                                    | ----                                    | ----                                 										   |
| buession-springcloud-common              | [使用帮助](common/index.md)              | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-common/3.0.1/)        |
| buession-springcloud-bus                 | [使用帮助](common/index.md)              | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-bus/3.0.1/)        |
| buession-springcloud-config-client       | [使用帮助](config-client/index.md)       | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-config-client/3.0.1/)        |
| buession-springcloud-config-server       | [使用帮助](config-server/index.md)       | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-config-server/3.0.1/)        |
| buession-springcloud-consul              | [使用帮助](consul/index.md)              | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-consul/3.0.1/)        |
| buession-springcloud-feign               | [使用帮助](feign/index.md)               | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-feign/3.0.1/)        |
| buession-springcloud-gateway             | [使用帮助](gateway/index.md)             | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-gateway/3.0.1/)        |
| buession-springcloud-hystrix             | [使用帮助](hystrix/index.md)             | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-hystrix/3.0.1/)        |
| buession-springcloud-loadbalancer         | [使用帮助](loadbalancer/index.md)        | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-kubernetes/3.0.1/)       |
| buession-springcloud-loadbalancer         | [使用帮助](kubernetes/index.md)          | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-kubernetes/3.0.1/)       |
| buession-springcloud-metrics             | [使用帮助](metrics/index.md)             | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-metrics/3.0.1/)        |
| buession-springcloud-nacos-config-client | [使用帮助](nacos-config-client/index.md) | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-nacos-config-client/3.0.1/)        |
| buession-springcloud-nacos-discovery     | [使用帮助](nacos-discovery/index.md)     | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-nacos-discovery/3.0.1/)        |
| buession-springcloud-ribbon              | [使用帮助](ribbon/index.md)              | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-ribbon/3.0.1/)        |
| buession-springcloud-stream-core         | [使用帮助](stream/core/index.md)         | [API 手册](https://javadoc.io/static/com.buession.springcloud.stream/buession-springcloud-stream-core/3.0.1/)        |
| buession-springcloud-stream-kafka        | [使用帮助](stream/kafka/index.md)         | [API 手册](https://javadoc.io/static/com.buession.springcloud.stream/buession-springcloud-stream-kafka/3.0.1/)        |
| buession-springcloud-stream-rabbitmq     | [使用帮助](stream/rabbitmq/index.md)      | [API 手册](https://javadoc.io/static/com.buession.springcloud.stream/buession-springcloud-stream-rabbitmq/3.0.1/)        |
| buession-springcloud-stream-rocketmq     | [使用帮助](stream/rocketmq/index.md)      | [API 手册](https://javadoc.io/static/com.buession.springcloud.stream/buession-springcloud-stream-rocketmq/3.0.1/)        |
| buession-springcloud-zuul                | [使用帮助](zuul/index.md)                | [API 手册](https://javadoc.io/static/com.buession.springcloud/buession-springcloud-zuul/3.0.1/)        |